--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.20"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.20",
+    "validator": "^13.1.1"
   },
   "devDependencies": {},
   "scripts": {
