--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "mongoose": "^5.9.20",
     "validator": "^13.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "supertest": "^4.0.2"
+  },
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
