--- a/package.json
+++ b/package.json
@@ -4,26 +4,24 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@shelf/jest-mongodb": "^1.2.2",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest-environment-node": "^26.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "supertest": "^4.0.2",
     "validator": "^13.1.1"
-  },
-  "devDependencies": {
-    "@shelf/jest-mongodb": "^1.2.3",
-    "jest-environment-node": "^26.3.0",
-    "supertest": "^4.0.2"
   },
   "scripts": {
     "start": "nodemon index.js",
     "test": "jest --watchAll --coverage"
   },
-  "author": "",
+  "author": "Bikash Dhakal",
   "license": "ISC"
 }
